# make-slug

./: .gitignore  .python-version  README.md  main.py  makeslug.py  requirements.txt  setup.cfg  test_makeslug.py
.github/workflows/: Build on Python 3.9.yml  python-app.yml
src/: __main__.py
test/: test_makeslug.py  test_mkslug.py
