[metadata]
name = make-slug
version = 0.0.1
author = Andy Bowskill
author_email = andybowskill@protonmail.com
description = Make a slug value (a part of a URL) from a regular sentence.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AndyBowskill/make-slug
project_urls =
    Bug Tracker = https://github.com/AndyBowskill/make-slug/issues
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src